@@ -1,8 +1,8 @@
-#!/usr/bin/expect --
+#! @EXPECT_PATH@ --
 ##
 ## $Id: csblogin,v 1.3 2010-01-28 13:12:00 bjorn Exp $
 ##
-## rancid 2.3.2a8
+## @PACKAGE@ @VERSION@
 ## Copyright (c) 1997-2007 by Terrapin Communications, Inc.
 ## All rights reserved.
 ##
