@@ -477,6 +477,7 @@ AC_CONFIG_FILES(bin/blogin bin/brancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/bntlogin bin/bntrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/brocaderancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/cat5rancid bin/clogin bin/rancid, [chmod a+x $ac_file])
+AC_CONFIG_FILES(bin/csblogin bin/csbrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/cssrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/dlogin bin/drancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/elogin bin/erancid, [chmod a+x $ac_file])
